--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="styles.css">
+    <title>Horny Alert</title>
+    <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 </head>
 <body>
 
