--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<audio id="myAudio">
+<audio id="myAudio" loop>
   <source src="hornysound.mp3" type="audio/mp3">
   Your browser does not support the audio element.
 </audio>
