--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="styles.css">
-    <title>Horny Alert</title>
+    <title>Virgin Alert</title>
     <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 </head>
 <body>
 
 <audio id="myAudio" loop>
-  <source src="hornysound.mp3" type="audio/mp3">
+  <source src="virgin alert2.mp3" type="audio/mp3">
   Your browser does not support the audio element.
 </audio>
 
 
-<button onclick="playAudio()" type="button" class="btn">Horny</button>
+<button onclick="playAudio()" type="button" class="btn">Virgin</button>
 
 <script>
 var x = document.getElementById("myAudio"); 
